<resources>
    <string name="app_name">GraphApiSample</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phones">Phone</string>
</resources>
