<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.technocratos.graphapisample.auth.activities.LoginActivity"
    android:padding="@dimen/default_padding"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginActivityTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16"
            android:hint="@string/username"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/loginActivityTextPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginActivityTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_16"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:nextFocusDown="@+id/loginActivityButtonGo"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginActivityButtonGo"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
</LinearLayout>
